Update gradle and previe args ...